--- a/Source_Codes/Feature_Selection_and_Extraction_for_Numerical_Data_Blog_Feedback.ipynb
+++ b/Source_Codes/Feature_Selection_and_Extraction_for_Numerical_Data_Blog_Feedback.ipynb
@@ -4617,12 +4617,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#It appears that none of the features miss a single value and no further processing is required."
+    "It appears that none of the features miss a single value and no further processing is required to handle missing values. If required, please refer to Handling_Missing_Values.ipynb file."
    ]
   },
   {
@@ -61476,6 +61474,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
