added imputation information

--- a/Source_Codes/Handling_Missing_Values.ipynb
+++ b/Source_Codes/Handling_Missing_Values.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "## 1.Missing Completely At Random (MCAR)\n",
-    "Say we have a cross-sectional data set for a population of people and there are missing values of a feature. However, if the probability of missing this feature is the same for each of the samples/ people, then this is a case of Missing Completely At Random (MCAR). So how would we go about as data scientists to verify that this is indeed a case of MCAR and there is no non-uniform probability of this feature missing for different samples? One way to verify this would be to ask the data collector why are the values missing for this feature for certain samples. If the collector says that values get missed when a data collector forgets to type the value sometimes, then it is obvious that there is a uniform probability that this feature could be missing for any of the samples. This would verify that this is a case of MCAR."
+    "Say we have a cross-sectional data set for a population of people and there are missing values of a feature. However, if the probability of missing this feature is the same for each of the samples/ people, then this is a case of Missing Completely At Random (MCAR). So how would we go about as data scientists to verify that this is indeed a case of MCAR and there is no non-uniform probability of this feature missing for different samples? One way to verify this would be to ask the data collector why the values are missing for this feature for certain samples. If the collector says that values get missed when a data collector forgets to type the value sometimes, then it is obvious that there is a uniform probability that this feature could be missing for any of the samples. This would verify that this is a case of MCAR."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "## 2.Missing At Random (MAR)\n",
-    "However, suppose in the above case, if the collector replied by saying that people from European countries do not hesitate to give out their heights since they are tall and feel proud of it while some people from Asia with shorter stature prefer not to disclose their heights and thus the data set has some missing values, then it is obvious that different samples can have different probability of missing data for this feature and the probability of randomly missing values of a feature depends on another predictor variable (here, the continent feature that exists in the data set). Suppose, the data collector said that European people give out their heights willingly 99% of the time while Asian people give out their heights only 70% of the time, then there are two different probabilities of randomly missing data for these two groups in the population. This is a case of MAR. Here, the probability of randomly missing values are depending on some other factor (which continent they are from). In such cases, we can impute  the missing values using this another feature from the data set unlike in MCAR where there is no such feature to relate to."
+    "However, suppose in the above case, the feature was height, and if the collector replied by saying that people from European countries do not hesitate to give out their heights since they are tall and feel proud of it while some people from Asia with shorter stature prefer not to disclose their heights and thus the data set has some missing values, then it is obvious that different samples can have different probabilities of missing data for this feature and the probability of randomly missing values of a feature depends on another predictor variable (here, the continent feature that exists in the data set). Suppose, the data collector said that European people give out their heights willingly 99% of the time while Asian people give out their heights only 70% of the time, then there are two different probabilities of randomly missing data for these two groups in the population. This is a case of MAR. Here, the probability of randomly missing values os dependent on some other factor (which continent they are from). In such cases, we can impute  the missing values using this another feature from the data set unlike in MCAR where there is no such feature to relate to."
    ]
   },
   {
@@ -90,26 +90,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Drop the samples.\n",
-    "If the number of samples that have some missing value(s) is very low as compared to the total number of training samples, training without these samples should not be much of a problem and thus these samples can be dropped. This comes with a cost of losing some information in the process."
+    "## 1. Drop the samples/ features.\n",
+    "### Samples\n",
+    "If the number of samples that have some missing value(s) is very low as compared to the total number of training samples, training without these samples should not be much of a problem and thus these samples can be dropped. This comes with a cost of losing some information in the process.<br>\n",
+    "### Features\n",
+    "The general rule of thumb is that if 95% or more samples miss a feature, this feature can be dropped from the data set.<br>\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.Impute a continuous feature using Zero/ Mean/ Median\n",
-    "Although this method is easy, this method gives poor results in general.We can also add an indicator variable that shows whether this feature is missing or not."
+    "## 2. Imputation<br>\n",
+    "The general rule of thumb is that for a feature column x, if less than 50% of the samples in the data set miss this feature, we should impute the values one way or another. If the missing percent is between 50 and 95, there is no strict guideline to follow. There are different methods of impuration as discussed below."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.Impute a categorical feature using \n",
-    "### a)The Most Frequent Value of this feature \n",
+    "### 2.1 Impute a missing continuous feature using Zero/ Mean/ Median\n",
+    "If the feature is a continuous variable, we can we a statistical measure of this feature for imputation. Although this method is easy, this method gives poor results in general. We can also add an indicator variable that shows whether this feature is missing or not. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.2 Impute a categorical feature using \n",
+    "#### a) The Most Frequent Value of this feature \n",
     "Since there is no quntitative significance of a categorical feature that was converted into an encoded numerical value (say, a feature \"color_of_eyes\" could have values \"black\", \"brown\", or \"blue\" and these categories were converted into 0, 1, and 2 respectively), it does not make sense to take a central measure such as mean or median of such a feature. Hence, instead, the missing value can be imputed using the most frequent feature.\n",
-    "### b)A New Category for this Feature\n",
+    "#### b) A New Category for this Feature can also be used.\n",
     "Assign each sample that misses this feature this new category.\n"
    ]
   },
@@ -117,8 +129,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Use a Machine Learning Model to Impute Numerical/ Categorical Features\n",
-    "### a. kNN Imputation\n"
+    "### 2.3. Use a Machine Learning Model to Impute Numerical/ Categorical Features\n",
+    "#### a. kNN Imputation\n",
+    "K Nearest Neighbors (kNN) algorithm is a method that can be used to impute the missing values. Consider the missing feature x as the label and other features f (without including label l) as the new features. Then use kNN to predict the feature value x using kNN where you use f as the training features. kNN model makes no assumptions about the features' distributions.\n",
+    "\n",
+    "#### b. Regression Imputation\n",
+    "A linear regression can also be applied instead of kNN to predict the value of the feature x. However, this comes with the model's assumptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition, many more strategies exist in practice such as using Maximum Likelihood, Multiple Imputation, etc."
    ]
   },
   {
