Add Vocabulary and Sentence Representation Types

--- a/For_Text_Features/Source_Codes/1_Data_Cleaning.ipynb
+++ b/For_Text_Features/Source_Codes/1_Data_Cleaning.ipynb
@@ -1314,7 +1314,8 @@
    "metadata": {},
    "source": [
     "As seen above, the punctuations and digits in the text are removed.<br><br>\n",
-    "However, this should be taken with a grain of salt. Numbers can sometime be helpful in NLP. For example, im movie review, if a review contains the digit 9 somewhere, there is a good chance this reviewer gave a score of 9 and this information can be very helpful for review classification. In such cases we do not want to discard the numbers in the text. However, if the problem at hand is sentiment analysis, a number might not add much information.\n",
+    "However, this should be taken with a grain of salt.<br>There can be cases where punctuations can add meanings. In such cases, it is better to retain the punctuations.\n",
+    "<br>Further, numbers can sometime be helpful in NLP. For example, im movie review, if a review contains the digit 9 somewhere, there is a good chance this reviewer gave a score of 9 and this information can be very helpful for review classification. In such cases we do not want to discard the numbers in the text. However, if the problem at hand is sentiment analysis, a number might not add much information.\n",
     " \n",
     "\n",
     "<br>This case will be handled down below. Thus, we can choose not to remove the numbers as below."
@@ -1939,7 +1940,7 @@
    "metadata": {},
    "source": [
     "### Frequent/ Rare Words Removal\n",
-    "Stop words are the words that occur frequently in sentences of a particular language. However, there can be words that occur frequently based on the topic in context which add no additional value to the text. We can visualize the words based on their frequency of occurence in the text. Such a diagram is called a word cloud.<br>\n",
+    "**Stop words** are the words that occur frequently in sentences of a particular language. However, there can be words that occur frequently based on the topic in context which add no additional value to the text. We can visualize the words based on their frequency of occurence in the text. Such a diagram is called a word cloud.<br>\n",
     "Also, words that occur rarely can be removed if deemed necessary."
    ]
   },
